# ZeroShot-VPN-Visual-Fingerprinting

./: .gitignore  README.md  launch_gui.bat  pyproject.toml
data/raw/idle_noise/: sysIdle2.pcap
demo_assets/: demo_report.json
demo_assets/templates/: library.json
demo_assets_final/: demo_report.json
demo_assets_final/templates/: library.json
demo_assets_test/: demo_report.json
demo_assets_test/templates/: library.json
demo_assets_test2/: demo_report.json
demo_assets_test2/templates/: library.json
demo_assets_test3/: demo_report.json
demo_assets_test3/templates/: library.json
demo_assets_test4/: demo_report.json
demo_assets_test4/templates/: library.json
outputs/: live_preview.pcap  sysIdle.pcap  test_capture.pcap  youtube.pcap
src/flowpic/: __init__.py  capture.py  data_builder.py  demo.py  generate.py  gui.py  library.py  live_capture_phase2.py  matching.py  model.py  predict.py  preprocess.py  train.py  train_pipeline.py  validate_real.py
src/flowpic_vpn_fingerprinting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: library.json
tests/: test_flowpic.py
